<resources>
    <string name="app_name">MyEvent</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_send_invitations">Send Invitations</string>
    <string name="title_activity_create_invitations">Create Invitations</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_manage_guest_list">Manage Guest-List</string>

    <string name="app_version">1.0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="required_permission_title">Required Permission</string>
    <string name="required_permission_ask_again">Request Again</string>
    <string name="required_contacts_permission_message">This permission is required in order to get access to your contacts, without it you won\'t be able to send SMS. Request permission again?</string>
    <string name="required_SMS_permission_message">This permission is required in order to get access to your SMS, without it you won\'t be able to send SMS. Request permission again?</string>
    <string name="required_gallery_permission_message">This permission is required in order to get access to your photo gallery, without it you won\'t be able to add Picture. Request permission again?</string>
    <string name="required_camera_permission_message">This permission is required in order to get access to your camera, without it you won\'t be able to add Picture. Request permission again?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello</string>
    <string name="title_activity_contacts_list">Contacts List</string>
    <string name="loading_contacts">Loading contacts</string>
    <string name="loading_invitation">Loading invitation</string>
    <string name="please_wait">Please wait…</string>
    <string name="contact_saves_in_db">Contact Saves In DB</string>
    <string name="error_saving_contact_in_db">Error Saving Contact In DB</string>
    <string name="picture_save_success">Picture Save success</string>
    <string name="saving_picture_faild_please_try_again">Saving picture faild, please try again.</string>
    <string name="invitation_save_success">Invitation Save success</string>
    <string name="saving_invitation_faild_please_try_again">Saving invitation faild, please try again.</string>
    <string name="error_occurred">Error occurred</string>
    <string name="SMS_faild_please_try_again">SMS faild, please try again.</string>
    <string name="SMS_sent">SMS sent.</string>
    <string name="error_bad_email_password">Error - bad email/password</string>
    <string name="register">Register</string>
    <string name="create">CREATE</string>
    <string name="welcome">"WELCOME"</string>
    <string name="title_activity_settings">Settings</string>
    <string name="event_type">Event type</string>
    <string name="wedding">"Wedding"</string>
    <string name="other">"Other"</string>
    <string name="functions_hall">"Functions hall"</string>
    <string name="garden_events">"Garden events"</string>
    <string name="date">"Date"</string>
    <string name="reception_time">"Reception time"</string>
    <string name="time">"Time"</string>
    <string name="event_place">"Event place"</string>
    <string name="event_place_type">"Event place type"</string>
    <string name="event_address">"Event address"</string>
    <string name="free_text">"Free text…"</string>
    <string name="add_pic">"Add Pic"</string>
    <string name="bride">"Bride name"</string>
    <string name="groom">"Groom name"</string>
    <string name="parents">"Parents name"</string>
    <string name="empty_field">"Empty field!"</string>
    <string name="design_invitation">"Design Invitation"</string>
    <string name="invitation_preview">"Invitation Preview"</string>
    <string name="design_picture">"Design picture"</string>
    <string name="edit_invitation">"Edit invitation"</string>
    <string name="send_invitation">"Send Invitation"</string>
    <string name="not_a_member">"Not a member? "</string>

    <string name="from_contacts">From Contacts</string>
    <string name="new_contact">New Contact</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_restart_dialog_title">Restart</string>
    <string name="pref_restart_dialog_message">For this change to take affect, app restart is required.</string>
    <string name="pref_language_title">Language</string>
    <string-array name="pref_languages_list_titles">
        <item>עברית</item>
        <item>English</item>
    </string-array>
    <string-array name="pref_languages_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="restart">Restart</string>
    <string name="later">Later</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_in">Login…</string>
    <string name="userName">User name</string>
    <string name="hina">hina</string>
    <string name="search">Search</string>
    <string name="all">ALL</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="maybe">MAYBE</string>

    <string name="send_to">Send to</string>
    <string name="send_all_contacts">All contacts</string>
    <string name="send_all_not_answer_yet">Not answer yet</string>
    <string name="send_manually">Manually custom</string>

    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Second</string>

    <string name="manage_guest_list">Manage Guest-List</string>


    <string name="select_action">Select Action</string>
    <string name="select_photo_from_gallery">Select photo from gallery</string>
    <string name="capture_photo_from_camera">Capture photo from camera</string>

    <string name="logout">Logout</string>

    <string name="user_type_regular">Regular</string>
    <string name="user_type_facebook">Facebook</string>
    <string name="user_type_google">Google</string>

    <string name="guest">Guest</string>


    <string name="option1">Option 1</string>
    <string name="option2">Build text format</string>
    <string name="clear">Clear</string>

    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>


    <string name="error_email_not_valid">Error - email is not valid</string>

    <string name="update_data">Update Data</string>
    <string name="import_excel">Import Excel</string>
    <string name="export_excel">Export Excel</string>
    <string name="guest_list_excel_name">Guest-list - MyEvent</string>

    <string name="deleted">deleted</string>
    <string name="undo">UNDO</string>


    <string name="excelTransitionName">excelTransitionName</string>
    <string name="loadingTransitionName">loadingTransitionName</string>


    //Google String's: !!!
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="name">Name :</string>

    <string name="facebook_app_id">138141696884806</string>

    <string name="facebook_login_btn">Login with Facebook</string>
    <string name="google_login_btn">Login with Google</string>


</resources>
