<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:gravity="center|start"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:paddingStart="5dp"
        android:text="@string/send_to"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/colorPrimary"/>
    <RadioGroup
        android:id="@+id/radio_grp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RadioButton
        android:textSize="16sp"
        android:id="@+id/radio_select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_all_contacts"/>
    <RadioButton
        android:textSize="16sp"
        android:id="@+id/radio_select_maybe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_all_not_answer_yet"/>
    <RadioButton
        android:textSize="16sp"
        android:id="@+id/radio_select_manually"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_manually" />
    </RadioGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:textSize="14sp"
        android:id="@+id/checkboxes_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

    </LinearLayout>

    </ScrollView>


</LinearLayout>
