<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.gal.invitation.Screens.Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginBottom="55dp"
        android:textStyle="bold"/>
   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/txtEmail"
       android:hint="@string/email"
       android:layout_margin="2dp"
       android:inputType="textEmailAddress"
       android:textAlignment="viewStart"/>

    <EditText
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_button"
        android:layout_marginTop="20dp" />




<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:layout_marginTop="40dp">
    <TextView
        android:id="@+id/login_txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_a_member" />
    <TextView
        android:text=""
        android:textColor="@android:color/holo_blue_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Register"
        android:layout_toEndOf="@id/login_txt_register"/>
</RelativeLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"/>


    <com.facebook.login.widget.LoginButton
        xmlns:facebook="http://schemas.android.com/apk/res-auto"
        android:id="@+id/facebook_sign_in_button"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        facebook:com_facebook_login_text="@string/facebook_login_btn"/>

</LinearLayout>
