<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gal.invitation.Screens.Register"
    tools:showIn="@layout/activity_register">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/ReEmail"
        android:hint="@string/email"
        android:textAlignment="viewStart"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ReName"
        android:hint="@string/userName"
        android:layout_below="@+id/ReEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:textAlignment="viewStart"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RePassword"
        android:hint="@string/password"
        android:layout_below="@+id/ReEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:inputType="textPassword"
        android:textAlignment="viewStart"/>


    <Button
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RePassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:id="@+id/btnRegister"
        android:textColor="#FFFFFF"
        android:background="@color/colorPrimary"/>

</RelativeLayout>
