<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    >

    <LinearLayout
        android:id="@+id/icon_edit_invitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/rhombus_margin"
        android:background="@drawable/rhombus"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profile_design_invitation_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/rhombus_icon_size"
                android:layout_height="@dimen/rhombus_icon_size"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_edit_invitation" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxWidth="@dimen/rhombus_text_width"
                android:text="@string/design_invitation"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/icon_send_invitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon_edit_invitation"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/rhombus_margin"
        android:background="@drawable/rhombus"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profile_send_invitation_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/rhombus_icon_size"
                android:layout_height="@dimen/rhombus_icon_size"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_send_message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxWidth="@dimen/rhombus_text_width"
                android:text="@string/send_invitation"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/icon_edit_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/rhombus_margin"
            android:background="@drawable/rhombus"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/profile_edit_guest_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/rhombus_icon_size"
                    android:layout_height="@dimen/rhombus_icon_size"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_contacts" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:maxWidth="@dimen/rhombus_text_width"
                    android:text="@string/manage_guest_list"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/icon_invitation_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/rhombus_margin"
            android:background="@drawable/rhombus"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/profile_invitation_preview_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/rhombus_icon_size"
                    android:layout_height="@dimen/rhombus_icon_size"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_invitation_preview" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:maxWidth="@dimen/rhombus_text_width"
                    android:text="@string/invitation_preview"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>